--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,15 @@
 # Site settings
-title: Clean Blog
+title: BLOG ISYANATION
 header-img: img/home-bg.jpg
-email: your-email@yourdomain.com
-copyright_name: Your/Project/Corporate Name
-description: "Write your site description here. It will be used as your sites meta description as well!"
-baseurl: "/startbootstrap-clean-blog-jekyll"
-url: "http://yourdomain.com"
-twitter_username: SBootstrap
-github_username:  davidtmiller
-facebook_username:  StartBootstrap
-email_username:  your-email@yourdomain.com
+email: nfiarts@gmail.com
+copyright_name: ISYANATION
+description: "Semua aktifitas, update, jadwal manggung tebaru Isyana Sarasvati akan di posting disini"
+baseurl: "/article"
+url: "https://blog.isyanation.tk"
+twitter_username: isyanation
+github_username:  isyanation
+facebook_username:  nfiarts
+email_username:  nfiarts@gmail.com
 
 # Google Analytics
 # To enable google analytics, uncomment below line with a valid Google Tracking ID
