--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@ header-img: img/home-bg.jpg
 email: nfiarts@gmail.com
 copyright_name: ISYANATION
 description: "Semua aktifitas, update, jadwal manggung tebaru Isyana Sarasvati akan di posting disini"
-baseurl: "/"
-url: "https://blog.isyanation.tk"
+baseurl: "/blog"
+url: "https://www.isyanation.tk/blog"
 twitter_username: isyanation
 github_username:  isyanation
 facebook_username:  nfiarts
